# qxlsx

QXlsx/: CMakeLists.txt
QXlsx/cmake/: gen.cmake
QXlsx/cmake/modules/: gen.cmake
QXlsx/header/: xlsxdocument.h  xlsxdocument_p.h  xlsxglobal.h  xlsxzipreader_p.h  xlsxzipwriter_p.h
QXlsx/source/: xlsxdocument.cpp  xlsxworkbook.cpp  xlsxzipreader.cpp  xlsxzipwriter.cpp
package/src/debian/: changelog  control.in
package/src/debian-dev/: changelog  control.in
package/src/rpm/rpmbuild/SPECS/: avm-qxlsx.spec
